# CenseoQoE

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  README_EN.md
CenseoQoE-Algorithm/: .gitignore  Dockerfile  README.md  README_EN.md  requirement.txt
CenseoQoE-Algorithm/test_code/: README.md  run.py  utils.py
CenseoQoE-Algorithm/test_code/results/: image_test.json  video_test.json
CenseoQoE-Algorithm/train_code/: .gitignore  README.md  inference.py  train.py
CenseoQoE-Algorithm/train_code/assets/: icme_ugcset_processed_test.json
CenseoQoE-Algorithm/train_code/configs/baseline/ICME_UGC_VIDEO/: icme_ugc_compressed_video_vqa_res18_basemodel_nr.py
CenseoQoE-Algorithm/train_code/configs/baseline/OWN_CLOUD_GAME_VIDEO/: cloud_game_video_compressed_vqa_res18_basemodel_nr.py
CenseoQoE-Algorithm/train_code/configs/baseline/OWN_PGC/: pgc_video_compressed_vqa_res18_basemodel_nr.py
CenseoQoE-Algorithm/train_code/configs/baseline/OWN_UGC/: ugc_video_general_vqa_res18_basemodel_nr.py
CenseoQoE-Algorithm/train_code/datasets/: __init__.py  base_dataset.py
CenseoQoE-Algorithm/train_code/losses/: __init__.py  l1_loss.py  l1_rank_loss.py
CenseoQoE-Algorithm/train_code/models/: __init__.py  censeo_ivqa_model.py
CenseoQoE-Algorithm/train_code/models/backbones/: __init__.py  resnet.py
CenseoQoE-Algorithm/train_code/models/heads/: __init__.py  simple_head.py
CenseoQoE-Algorithm/train_code/scripts/: censeoqoe_platform_to_json.py  icme_ugc_to_censeo_json.py  pytorch2onnx_jit_pb.py
CenseoQoE-Algorithm/train_code/trainers/: __init__.py  base_trainer.py
CenseoQoE-Algorithm/train_code/utils/: __init__.py  logger.py  utils.py  visualize.py
CenseoQoE-SDK/: .gitignore  CMakeLists.txt  README.md  README_EN.md  build.sh  download.sh  install.sh  main.cpp
CenseoQoE-SDK/assets/: model_urls.json
CenseoQoE-SDK/include/: censeo.h  infos.h  options.h  timer.h  utils.h
CenseoQoE-SDK/include/libtorch_infer_engine/: model_base.h
CenseoQoE-SDK/src/: censeo.cpp  infos.cpp  options.cpp  timer.cpp  utils.cpp
CenseoQoE-SDK/src/libtorch_infer_engine/: model_base.cpp
